deployment-conv-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      components: backend-conv-app
  template:
    metadata:
      labels:
        components: backend-conv-app
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          resources:
            limits:
              memory: "800Mi"
              cpu: "1000m"

          volumeMounts:
            - name: api-data
              mountPath: /opt/app/uploads   #к требует задание
              subPath: api

      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: api-pvc
