pod-conv-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    components: frontend-conv-app
spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
