rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13.7-management
          ports:
            - containerPort: 5672    # AMQP
            - containerPort: 15672   # Management web UI
          resources:
            limits:
              memory: "800Mi"
              cpu: "1000m"
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq/
              subPath: rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
